--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ About
 
 <tr>
 <td width="45%">
-<img src="img/about.jpeg" width="60%" alt="about" />
+<img src="about.jpeg" width="60%" alt="about" />
 </td>
 <td width=65% valign="top">
 <table border="0" width="100%" cellpadding="20" cellspacing="0" align="center">
